--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.2",
-    "@angular/cdk": "^11.2.2",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.2",
-    "@angular/material": "^11.2.2",
+    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@material/dialog": "^10.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
